--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1586,9 +1586,21 @@
     "The result of dataset get :\n",
     "1. No missing values are observed.\n",
     "2. The data types appear to be appropriate for each feature.\n",
-    "3. There are several numerical features like Age, DependentChildren, WeeklyWages, HoursWorkedPerWeek, DaysWorkedPerWeek, InitialIncurredCalimsCost, and UltimateIncurredClaimCost.\n",
-    "4. There are categorical features like Gender, MaritalStatus, and PartTimeFullTime.\n",
-    "5. There are time-based features like DateTimeOfAccident and DateReported."
+    "3. Time Components: We extracted year, month, and day from DateTimeOfAccident and DateReported. This could help us understand if there are seasonal patterns or yearly trends in the claim costs.\n",
+    "4. Days to Report: The time difference between the accident and the report date could be an important feature. It may indicate the severity of the accident or the efficiency of the claim reporting system.\n",
+    "5. Categorical Features: Encoding categorical variables like Gender, MaritalStatus, and PartTimeFullTime allows us to include these potentially important factors in our model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What We Can Test:\n",
+    "Feature Importance: After training the model, we can examine feature importances to see which engineered features are most impactful. This will give us an idea of what variables are strong predictors of the ultimate incurred claim cost.\n",
+    "\n",
+    "Correlation: We can perform correlation analysis between the new features and the target variable to understand their relationship better.\n",
+    "\n",
+    "Model Performance: By comparing the performance metrics (like RMSE) of models trained with and without the engineered features, we can get an empirical understanding of their usefulness."
    ]
   }
  ],
