update model and add images

--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -380,21 +380,21 @@
    "source": [
     "The training data has been successfully loaded, and we can observe the following columns:\n",
     "\n",
-    "1. ClaimNumber: The unique identifier for the claim.\n",
-    "2. DateTimeOfAccident: The date and time of the accident.\n",
-    "3. DateReported: The date when the accident was reported.\n",
-    "4. Age: Age of the claimant.\n",
-    "5. Gender: Gender of the claimant.\n",
-    "6. MaritalStatus: Marital status of the claimant.\n",
-    "7. DependentChildren: Number of dependent children.\n",
-    "8. DependentsOther: Number of other dependents.\n",
-    "9. WeeklyWages: Weekly wages of the claimant.\n",
-    "10. PartTimeFullTime: Indicator of part-time or full-time employment.\n",
-    "11. HoursWorkedPerWeek: Number of hours worked per week.\n",
-    "12. DaysWorkedPerWeek: Number of days worked per week.\n",
-    "13. ClaimDescription: Description of the claim.\n",
-    "14. InitialIncurredCalimsCost: Initial cost of the claim.\n",
-    "15. UltimateIncurredClaimCost: Ultimate cost of the claim.\n",
+    "- ClaimNumber: Pengidentifikasi polisi yang unik\n",
+    "- DateTimeOfAccident: Tanggal dan waktu kejadian kecelakaan\n",
+    "- DateReported: Tanggal kecelakaan dilaporkan\n",
+    "- Age: Umur pekerja\n",
+    "- Gender: Jenis kelamin pekerja\n",
+    "- MaritalStatus: Status perkawinan pekerja. (M) menikah, (S) single, (U) tidak diketahui.\n",
+    "- DependentChildren: Jumlah anak yang menjadi tanggungan\n",
+    "- DependentsOther: Jumlah tanggungan selain anak\n",
+    "- WeeklyWages: Upah mingguan total\n",
+    "- PartTimeFullTime: Biner (P) atau (F)\n",
+    "- HoursWorkedPerWeek: Total jam kerja per minggu\n",
+    "- DaysWorkedPerWeek: Jumlah hari kerja per minggu\n",
+    "- ClaimDescription: Deskripsi klaim dalam teks bebas\n",
+    "- InitialIncurredClaimCost: Estimasi awal dari biaya klaim oleh perusahaan asuransi\n",
+    "- UltimateIncurredClaimCost: Total pembayaran klaim oleh perusahaan asuransi. Ini adalah kolom yang Anda diminta untuk memprediksi dalam set tes.\n",
     "\n",
     "Statistical Summary"
    ]
@@ -769,24 +769,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here i find that interesting on train data\n",
-    "1. DependentChildren: Ranges from 0 to 9, with most claimants having no dependent children.\n",
-    "2. DependentsOther: Ranges from 0 to 5, with most claimants having no other dependents.\n",
-    "3. DaysWorkedPerWeek: Ranges from 1 to 7, with most claimants working 5 days a week.\n",
-    "4. InitialIncurredCalimsCost: Ranges from 1 to 2,000,000, indicating significant variation in initial claim costs.\n",
-    "5. UltimateIncurredClaimCost: Ranges from approximately 121.89 to 4,027,136, indicating significant variation in ultimate claim costs.\n",
+    "Berdasarkan data pelatihan, saya menemukan beberapa poin menarik:\n",
     "\n",
-    "Based histogram i get : \n",
-    "- Features like \"WeeklyWages,\" \"HoursWorkedPerWeek,\" \"InitialIncurredCalimsCost,\" and \"UltimateIncurredClaimCost\" exhibit significant skewness and potential outliers.\n",
-    "- \"HoursWorkedPerWeek\" has some instances where the values are considerably higher, which could be outliers. The maximum value of 640 hours is clearly an outlier, as it is significantly higher than the 99th percentile value of 60 hours. Method i suggest to fix the ourlier is Capping Method\n",
-    "Pros:\n",
-    "Can use domain knowledge or percentiles (e.g., 99th percentile) to cap values.\n",
-    "Does not rely on the assumption of normal distribution.\n",
-    "Cons:\n",
-    "Requires manual selection of the cap value, which may be arbitrary.\n",
-    "May lose some information if capping is too aggressive.\n",
+    "Sebagian besar klaiman tidak memiliki anak tanggungan atau tanggungan lainnya.\n",
+    "Sebagian besar klaiman bekerja 5 hari seminggu.\n",
+    "Terdapat variasi signifikan dalam biaya klaim awal dan akhir.\n",
+    "Berdasarkan histogram yang saya dapatkan:\n",
     "\n",
-    "So i only use train.csv as dataset then i split, for test.csv i do for A/B testing."
+    "Beberapa fitur menunjukkan kecondongan (skewness) yang signifikan dan kemungkinan adanya outlier.\n",
+    "Ada beberapa nilai yang jauh lebih tinggi, yang bisa jadi adalah outlier. Metode yang saya sarankan untuk memperbaiki outlier adalah metode penutupan.\n",
+    "Kelebihan:\n",
+    "Dapat menggunakan pengetahuan domain atau persentil (misalnya, persentil ke-99) untuk membatasi nilai.\n",
+    "Tidak bergantung pada asumsi distribusi normal.\n",
+    "Kekurangan:\n",
+    "Memerlukan pemilihan manual untuk nilai batas, yang mungkin bersifat sewenang-wenang.\n",
+    "Mungkin kehilangan beberapa informasi jika penutupan terlalu agresif."
    ]
   },
   {
@@ -851,10 +848,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based the diagram, here my keypoint :\n",
-    "1. InitialIncurredCalimsCost: Positive correlation of approximately 0.395. This indicates that as the initial incurred claims cost increases, the ultimate incurred claim cost tends to increase as well.\n",
-    "2. WeeklyWages: Positive correlation of approximately 0.152. This suggests that higher weekly wages are associated with higher ultimate incurred claim costs.\n",
-    "3. Age: Positive correlation of approximately 0.103. Older individuals may have higher ultimate incurred claim costs\n",
+    "Berdasarkan diagram, poin kunci saya adalah:\n",
+    "\n",
+    "'InitialIncurredCalimsCost' memiliki korelasi positif sekitar 0,395. Ini menunjukkan bahwa ketika biaya klaim awal meningkat, biaya klaim akhir cenderung juga meningkat.\n",
+    "'WeeklyWages' memiliki korelasi positif sekitar 0,152. Ini menunjukkan bahwa upah mingguan yang lebih tinggi dikaitkan dengan biaya klaim akhir yang lebih tinggi.\n",
+    "'Age' memiliki korelasi positif sekitar 0,103. Orang yang lebih tua mungkin memiliki biaya klaim akhir yang lebih tinggi.\n",
     "\n",
     "Handling Missing Values and Data type checking"
    ]
@@ -1009,12 +1007,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data types and missing value analysis reveals the following:\n",
+    "Analisis tipe data dan nilai yang hilang mengungkapkan hal berikut:\n",
     "\n",
-    "* ClaimNumber, DateTimeOfAccident, DateReported, Gender, MaritalStatus, PartTimeFullTime, and ClaimDescription are object types (likely strings).\n",
-    "* Age, DependentChildren, DependentsOther, DaysWorkedPerWeek, and InitialIncurredCalimsCost are integer types.\n",
-    "WeeklyWages, HoursWorkedPerWeek, and UltimateIncurredClaimCost are float types.\n",
-    "* There are 29 missing values in the MaritalStatus column, which may require handling."
+    "Ada beberapa kolom dengan tipe objek (kemungkinan string).\n",
+    "Beberapa kolom memiliki tipe integer dan float.\n",
+    "Terdapat 29 nilai yang hilang di kolom 'MaritalStatus', yang mungkin memerlukan penanganan."
    ]
   },
   {
@@ -1238,7 +1235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For marital in train data i will replace with 'S' which is group with lowest cost. And for test data i will use capping method"
+    "Untuk kolom 'Marital' di data pelatihan, saya akan menggantinya dengan 'S' yang merupakan kelompok dengan biaya terendah. Dan untuk data tes, saya akan menggunakan metode penutupan."
    ]
   },
   {
@@ -1696,16 +1693,15 @@
    "source": [
     "2. Data Preprocessing & Feature Engineering\n",
     "\n",
-    "based dataset and learning domain knowledge, the feature that created is\n",
-    "- DateTime Conversion =  This is essential for the extraction of year, month, and day components.\n",
-    "- Time Components Extraction = These new features could capture some seasonality or trends in the data.\n",
-    "- Outlier Treatment: Outliers in 'UltimateIncurredClaimCost' are capped at 1 million to limit their influence on the model.\n",
-    "- Date Features: Year, month, and day are extracted for additional temporal features.\n",
-    "Text Mining: Keywords in 'ClaimDescription' are used to create new features, like 'CD_BACK' if the word \"BACK\" appears.\n",
-    "- Interaction Features: Created by combining existing features, e.g., 'Age' multiplied by 'WeeklyWages'.\n",
-    "- Advanced Text Mining: The notebook also explores TF-IDF for text features, which resulted in a higher MSE.\n",
-    "- Categorical encoding = categorical features Gender, MaritalStatus, and PartTimeFullTime are label encoded. Label encoding converts each unique category to an integer. Missing values, if any, are filled with 'Unknown' before encoding.\n",
-    "- Drop unnecessary columns = the original datetime columns and other text or identifier columns are dropped as they've either been transformed or are not used in the modeling process."
+    "Konversi DateTime: Ini penting untuk ekstraksi komponen tahun, bulan, dan hari.\n",
+    "Ekstraksi Komponen Waktu: Fitur baru ini bisa menangkap beberapa musiman atau tren dalam data.\n",
+    "Perlakuan Terhadap Outlier: Outlier pada 'UltimateIncurredClaimCost' dibatasi pada 1 juta untuk membatasi pengaruh mereka pada model.\n",
+    "Fitur Tanggal: Tahun, bulan, dan hari diekstraksi untuk fitur temporal tambahan.\n",
+    "Penambangan Teks: Kata kunci dalam 'ClaimDescription' digunakan untuk membuat fitur baru.\n",
+    "Fitur Interaksi: Dibuat dengan menggabungkan fitur yang sudah ada.\n",
+    "Penambangan Teks Lanjutan: Notebook ini juga mengeksplorasi TF-IDF untuk fitur teks, yang menghasilkan MSE yang lebih tinggi.\n",
+    "Enkoding Kategorikal: fitur kategorikal diubah menjadi kode label.\n",
+    "Membuang Kolom yang Tidak Perlu: kolom datetime asli dan kolom teks atau pengenal lainnya dibuang karena mereka telah diubah atau tidak digunakan dalam proses pemodelan."
    ]
   },
   {
@@ -1912,7 +1908,7 @@
    "source": [
     "#make copy first row in test data to dict\n",
     "test_dict = processed_test_data.iloc[0].to_dict()\n",
-    "print(test_dict)\n"
+    "print(test_dict)"
    ]
   },
   {
@@ -1935,8 +1931,7 @@
     "from lightgbm import LGBMRegressor\n",
     "from catboost import CatBoostRegressor\n",
     "from xgboost import XGBRegressor\n",
-    "import time\n",
-    "import shap"
+    "import time"
    ]
   },
   {
@@ -2477,30 +2472,6 @@
     "joblib.dump(xgb_model, 'xgb_model.pkl')\n",
     "joblib.dump(lgbm_model, 'lgbm_model.pkl')\n",
     "joblib.dump(catboost_model, 'catboost_model.pkl')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Key Insights\n",
-    "Text Features: Simple text mining techniques effectively reduce the MSE, showing their importance.\n",
-    "\n",
-    "Outliers: The strategy of capping outliers at 1 million seems effective but needs further investigation.\n",
-    "\n",
-    "Model Complexity: Advanced text mining techniques like TF-IDF increased the MSE, suggesting simpler models might be more effective."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Recommendations\n",
-    "Feature Consistency: Ensure the features used in the training set are also available in the test set to maintain model performance.\n",
-    "\n",
-    "Outlier Strategy: More in-depth analysis should be conducted to understand the impact of treating outliers.\n",
-    "\n",
-    "Model Simplification: Considering that advanced text mining increased the MSE, simplifying the model could be beneficial."
    ]
   }
  ],
